--- a/index.html
+++ b/index.html
@@ -1,71 +1,42 @@
 <!doctype html>
-<html id="html">
+<html>
 <head>
-  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Colorful Flat</title>
+  <title>Yaht Club</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="wrapper" align="justify">
+  <div class="wrapper" align="justify">
   <section class="headers">
-    <header>        
+    <header>
         <a href="">
-          <img src="image/BisLite.png" alt="BisLite">
+          <img src="111.jpg" width="15%">
         </a>
+        
         <ul>
           <li><a href="">Home</a></li>
-          <li><a href="">Services</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Blog</a></li>
+          <li><a href="">Yahts</a></li>
+          <li><a href="">Destinations</a></li>
+          <li><a href="">License</a></li>
           <li><a href="">Contacts</a></li>
-          <li><a href="">About us</a></li>
         </ul>
-
       </header>
   </section>
  </div>
- <br>
- <header>
- <div>
-   <img src="image/2-layersу.png" alt="2-layersу"><b> PORTFOLIO</b>
- </div>
- </header>
 <header>
-  <div>
-  <hr align="center" width="1000px" size="2" color="#808080" />
-   <ul>
-          <li><a href=""><ss>All</ss></a></li>
-          <li><a href=""><ss>Websites</ss></a></li>
-          <li><a href=""><ss>Wordpress</ss></a></li>
-          <li><a href=""><ss>obile Apps</ss></a></li>
-          <li><a href=""><ss>Icons</ss></a></li>
-          <li><a href=""><ss>Logos</ss></a></li>
-          <li><a href=""><ss>Graphics</ss></a></li>
-        </ul> 
-     <hr align="center" width="1000px" size="2" color="#808080" />
-  </div>
 
-</header>
+ <div class="content1" id="content1">
+   <img src="img\carousel1.jpg" alt="carousel1">
+ </div>
+
+ </header>
 <br>
 <section class="contents">
+
   <div class="content" id="content">
-    <img src="image\2-layers.png" alt="2-layers">
-    <img src="image\2-layers.png" alt="2-layers">
-    <img src="image\2-layers.png" alt="2-layers">
-    <img src="image\2-layers.png" alt="2-layers">
-    <img src="image\2-layers.png" alt="2-layers">
-    <img src="image\2-layers.png" alt="2-layers">
-    <img src="image\2-layers.png" alt="2-layers">
-    <img src="image\2-layers.png" alt="2-layers">
-    <img src="image\2-layers.png" alt="2-layers">
-    <img src="image\2-layers.png" alt="2-layers">
-    <img src="image\2-layers.png" alt="2-layers">
-    <img src="image\2-layers.png" alt="2-layers">
-    <img src="image\2-layers.png" alt="2-layers">
-    <img src="image\2-layers.png" alt="2-layers">
-    <img src="image\2-layers.png" alt="2-layers">
-    <img src="image\2-layers.png" alt="2-layers">
+    <img src="img\about.jpg" width="30%">
+    <img src="img\carousel2.jpg" width="30%">
+    <img src="img\pic2.jpg" width="30%">
   </div>
 </section>
 </body>
